tests/kulezi_tests/good/string.lat
int main() {
    string s = "abcdef";
    printString(s);
    return 0;
}