tests/kulezi_tests/bad/bad_incr01.lat
int main() {
    string x;
    x++;
    return 0;
}